--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "embla-carousel-react": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
